# dependency-scanner

./: .gitignore  README.md  docker-compose.yml  example.env
backend/: Cargo.toml  DockerFile
backend/migrations/: 20260316000003_create_packages_table.up.sql
backend/src/: app.rs  db.rs  main.rs
backend/src/features/: dps_scan.rs  mod.rs  package_service.rs  sources.rs  zip_source.rs
backend/src/features/disk_cache/: cache.rs  error.rs
backend/src/features/dps_scan/: errors.rs  handler.rs  models.rs  service.rs
backend/src/features/dps_scan/scanner_pipeline/: mod.rs  osv.rs  purl.rs  sbom.rs
backend/src/features/package_service/: errors.rs  handler.rs  helpers.rs  models.rs  repository.rs  schemas.rs  service.rs
backend/src/features/zip_source/: decompiler.rs  error.rs  file_extractors.rs  github.rs  npm.rs  nuget.rs  pypi.rs
client/: DockerFile  index.html  package-lock.json  package.json
client/src/: App.tsx  index.css  main.tsx
client/src/api/: client.ts  dependencyScan.api.ts  packages.api.ts
client/src/components/: NavBar.tsx  PackageSelector.tsx
client/src/components/dependencyScan/: FindingCard.tsx  VulnDetail.tsx  helpers.ts
client/src/hooks/dependencyScan/: useDependencyScan.ts  useDependencyScanStore.ts
client/src/pages/: DependencyScanPage.tsx  PackagesPage.tsx
client/src/types/: dependencyScan.ts  packages.ts  source.ts
