[package]
name = "rust-service"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.13.2", features = ["blocking", "json"]}
tokio = {version = "1.49.0", features = ["full"]}
zip = "8.1.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.149"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "std", "fmt"]}
axum = "0.8.8"
tower-http = {version = "0.6.2", features = ["cors", "trace"]}
dotenvy = "0.15.7"
chrono = {version = "0.4.43", features = ["serde"]}
futures = "0.3.31"
thiserror = "2.0.18"
sqlx = {version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-native-tls", "chrono", "json"]}
walkdir = "2.5.0"
tempfile = "3.26.0"
bytes = "1"
dirs = "6.0.0"
flate2 = "1.1.9"
tar = "0.4.44"
